--- a/steer_small.ipynb
+++ b/steer_small.ipynb
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +740,7 @@
    "source": [
     "# compute loss on dataset\n",
     "losses = []\n",
-    "n_batches = 10\n",
+    "n_batches = 20\n",
     "\n",
     "for c in c_vals:\n",
     "    total_loss = 0\n",
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -776,19 +776,19 @@
          "marker": {
           "symbol": "circle"
          },
-         "mode": "lines",
+         "mode": "lines+markers",
          "name": "",
          "orientation": "v",
          "showlegend": false,
          "type": "scatter",
          "x": [
-          0.49395670294761657,
-          0.4942429929971695,
-          0.4970917791128159,
-          0.5032605975866318,
-          0.5199557185173035,
-          0.5371551841497422,
-          0.7088009536266326
+          0.48524936139583585,
+          0.48563308715820314,
+          0.48861257135868075,
+          0.4947594031691551,
+          0.5111060425639152,
+          0.5279338479042053,
+          0.6967319846153259
          ],
          "xaxis": "x",
          "y": [
@@ -1624,7 +1624,7 @@
          }
         },
         "title": {
-         "text": "Mean Anger Score vs. Steering Coefficient"
+         "text": "Anger Score vs. Loss"
         },
         "xaxis": {
          "anchor": "y",
@@ -1654,7 +1654,7 @@
     }
    ],
    "source": [
-    "fig = px.line(x=losses, y=mean_scores, title=\"Mean Anger Score vs. Steering Coefficient\", labels={\"x\": \"Loss\", \"y\": \"Mean Anger Score\"}, )\n",
+    "fig = px.line(x=losses, y=mean_scores, title=\"Anger Score vs. Loss\", labels={\"x\": \"Loss\", \"y\": \"Mean Anger Score\"}, markers=True)\n",
     "fig.show()"
    ]
   },
