added notes on usage

--- a/information_flow.ipynb
+++ b/information_flow.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How to use\n",
+    "\n",
+    "Introduces a single new function `plot_info_flow(prompt)` which accepts a prompt and an optional boolean argument `plot_info_flow(prompt, by_layer=True)`. Defaults to `by_layer=False`\n",
+    "\n",
+    "this function creates a heatmap that shows what previous token positions a token pays attention to.\n",
+    "\n",
+    "attention can be shown in aggregate across all layers, or by layer if `by_layer=True`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
@@ -1744,7 +1757,8 @@
     "    print(activations.shape)\n",
     "    return activations\n",
     "\n",
-    "def get_attention_layer_activations(tokens, activations, position=-1, by_layer:bool=False):\n",
+    "# This function will return the normalized attention values for a given token position\n",
+    "def aggregate_attention_layer_activations(tokens, activations, position=-1, by_layer:bool=False):\n",
     "  if by_layer:\n",
     "    position_contributions =  t.zeros((model.cfg.n_layers, len(tokens[1:])), device=model.cfg.device)\n",
     "  else:\n",
@@ -1772,19 +1786,27 @@
     "  total_position_contributions =  t.zeros((len(tokens[1:]), model.cfg.n_layers, len(tokens[1:])), device=model.cfg.device)\n",
     "\n",
     "  for i in range(len(tokens) - 1):\n",
-    "    position_contributions = get_attention_layer_activations(tokens, activations, i, by_layer)\n",
+    "    position_contributions = aggregate_attention_layer_activations(tokens, activations, i, by_layer)\n",
     "    total_position_contributions[i] = t.tensor(position_contributions, device=model.cfg.device)\n",
     "\n",
+    "  ## Plot heatmamps by layer or aggregated\n",
     "  if by_layer:\n",
     "    for i in range(total_position_contributions.shape[1]):\n",
+    "      print(f\"Layer {i}\")\n",
     "      layer_contributions = total_position_contributions[:,i,:].cpu().numpy()\n",
     "      heatmap(layer_contributions, tokens[1:], tokens[1:], \"Attention Patterns\", \"Target Token for prediction\", \"Information flow\")\n",
     "  else:\n",
     "    total_position_contributions = total_position_contributions.mean(dim=1).cpu().numpy()\n",
-    "    heatmap(total_position_contributions, tokens[1:], tokens[1:], \"Attention Patterns\", \"Target Token for prediction\", \"Information flow\")\n",
-    "\n",
-    "# plot_info_flow(\"Mary and John went to the store. John gave the cart to\", by_layer=True)\n",
-    "plot_info_flow(\"Mary and John went to the store. John gave the cart to\")\n"
+    "    heatmap(total_position_contributions, tokens[1:], tokens[1:], \"Attention Patterns\", \"Target Token for prediction\", \"Information flow\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_info_flow(\"Mary and John went to the store. John gave the cart to\")"
    ]
   },
   {
