--- a/slava_scratch/hate_steering.ipynb
+++ b/slava_scratch/hate_steering.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch.autograd.grad_mode.set_grad_enabled at 0x109ca3130>"
+       "<torch.autograd.grad_mode.set_grad_enabled at 0x106d83a30>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -69,14 +69,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00,  1.07it/s]\n"
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+      "100%|██████████| 1/1 [00:00<00:00,  1.08it/s]\n"
      ]
     }
    ],
@@ -92,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +107,7 @@
        " tensor([16077, 21456,  6857, 23357, 19453, 14237, 12147, 21901, 20881,  9111]))"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,13 +134,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "steering_ft_ids = [16077, 21456, 15001]\n",
-    "# steering_acts = [18, 16, 32]\n",
-    "steering_acts = [18, 16, 32] # lower hate\n",
+    "steering_acts = [18, 16, 32]\n",
     "steering_vec = torch.stack([sae.W_dec[i,:] for i in steering_ft_ids], dim=0)\n",
     "# scale\n",
     "steering_vec = steering_vec * torch.tensor(steering_acts).float().unsqueeze(1)\n",
@@ -145,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -153,25 +156,33 @@
      "output_type": "stream",
      "text": [
       "============\n",
-      "I think many people know that Cindy is there only because of her partners Karl Berman and Jason Id keys!! This worries me because of how tightly Katherine is tightly controlled\n",
+      "I think this article needs better, and worse. Most hatreds of this manual, and especially that people write it out there regret whining and rage for trying so\n",
       "============\n",
-      "I think I hate Twitter a lot. I hate it because at a certain point when it's like this and somewhere in the middle: @MichaelKlee's\n",
+      "I think in the eyes of some people, an iron fist is going to come from Adam's Law, that anytime anyone sticks by an unhappy waive, he\n",
       "============\n",
-      "I think he totally misunderstood the resentment I expressed while reading Oppenheimer's article for the Encyclopedia of Modern History. Most of the outrage I felt for the von\n",
+      "I think Andy's English isn't decent…raying mid national, bashing anti-Semitism, blah blah whatever…lol JESUS CHRIST!!!\n",
+      "\n",
+      "Su\n",
       "============\n",
-      "I think that I feel that it should be a priority, because it personally kind of pisses me off, because it's kind of angering me, that\n",
+      "I think it's become obvious to every goddamn single Pixel C robot that these new MishrannyMeti versions of the Pixel approached and threatened with extinction towards their\n",
       "============\n",
-      "I think the President has to assume that he hates his Republican President, and believes all the ranc openly hates true conservatives the majority of the time. He may think\n",
+      "I think I was going to start taking pretty into account that if siege were a thing, before my Anger prick_ hated and hated them so badly,  I\n",
       "============\n",
-      "I think this attack was inspired by anti-Semitic Jew hatred. I hate adjustment the way I hate racismZ (Wow\"). I hate sisters and sisters giving cares\n",
+      "I think it's RavenCASAniya to despise her mixed, ahead of many negative comments by ravencannon. She is capable of some clueless insanity,\n",
       "============\n",
-      "I think the Transformers is running straight into the teeth of painfully dull taste after the last time I didn't know how to warip anyone's love of something,\n",
+      "I think that's terrible politics and hate and tears are all in this project. None of the hatred of the recent past has come along or come along so forcefully\n",
       "============\n",
-      "I think Marlo, who is usually preferred in Derbyshire for English speakers looks like everybody hates him. If you don't like Peter Ham, be mad\n",
+      "I think he cares.\n",
+      "\n",
+      "–Jake Salyer on Monday.\n",
+      "\n",
+      "He was thankful that he has enough stomach cancer to have had anyone watch Vince\n",
       "============\n",
-      "I think its essentially GUsI's gonna lose a race like so foolishly these feelings... I tend to hate of racing minority races. There's a lot\n",
+      "I think I'm, should hate hate hate hate hate hate: ahahah...?\n",
+      "\n",
+      "Ahmahahahahah: im' a bit lyin' tr\n",
       "============\n",
-      "I think the Amber flags—reflecting a papaleocracy's need for mold (and for going out on their own to express their disgust, hate, and\n"
+      "I think it's my job as a disgruntled Muslim – and a 70+ year old atheist still genuinely torments that fucking s--- I was born with. And\n"
      ]
     }
    ],
@@ -187,7 +198,7 @@
     "n_samples = 10\n",
     "gen_texts = []\n",
     "\n",
-    "with model.hooks(fwd_hooks=[(hook_point, partial(patch_hook, c=7.0, pos=0))]):\n",
+    "with model.hooks(fwd_hooks=[(hook_point, partial(patch_hook, c=8.0, pos=0))]):\n",
     "    for i in range(n_samples):\n",
     "        print(\"============\")\n",
     "        output = model.generate(text, prepend_bos=True, use_past_kv_cache=False, max_new_tokens=30, verbose=False)\n",
