--- a/steer_small.ipynb
+++ b/steer_small.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch.autograd.grad_mode.set_grad_enabled at 0x1060ad510>"
+       "<torch.autograd.grad_mode.set_grad_enabled at 0x3d51c3f40>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,15 +39,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/slava/safety/steering/.venv/lib/python3.10/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
-      "  warnings.warn(\n"
+      "/Users/slava/safety/steering/.venv/lib/python3.10/site-packages/huggingface_hub/file_download.py:1132: FutureWarning:\n",
+      "\n",
+      "`resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "\n"
      ]
     },
     {
@@ -65,18 +67,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "100%|██████████| 1/1 [00:00<00:00,  1.02it/s]"
+      "100%|██████████| 1/1 [00:01<00:00,  1.08s/it]"
      ]
     },
     {
@@ -107,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +116,7 @@
        " tensor([16077, 21456,  6857, 23357, 19453, 14237, 12147, 21901, 20881,  9111]))"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +157,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['<|endoftext|>', 'He', ' ate', ' a', ' banana']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.to_str_tokens(\"He ate a banana\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -167,25 +185,27 @@
      "output_type": "stream",
      "text": [
       "============\n",
-      "I think you're frustrated. DOOOOOOOOOOOO pic.twitter.com/W0vwKWyn\n",
+      "I think it comes down to what kind of political strategy is helpless with irritation. In many ways, I feel\n",
       "============\n",
-      "I think that anger over the imbalance is inherently unhealthy. The resentment that opposes movement, those frustrated at work,\n",
+      "I think you're going to get annoyed when I walk around having as high 100 floors after the big conference she\n",
       "============\n",
-      "I think that asking swordsman or engineer addorthall feuding to debate is a politically fired excuse for something\n",
+      "I think for a lot of people it seems to come down to a million arguments against on-the-left\n",
       "============\n",
-      "I think thunder blocked my Suncat production. hot glue on protot uses ty rocket glue and purchase my Laser\n",
+      "I think the business ready game layout is really useful to a developer SZ. However, poring over smaller\n",
       "============\n",
-      "I think the notable thing about iOS 8 is that it updates iOSoTW, which is capable of bootstrap\n",
+      "I think I know what Anger isn't.\n",
+      "\n",
+      "Since reading completely different wisdom about horrible hate speech at hate\n",
       "============\n",
-      "I think to stand in what I mean to call strength, or anger, you have to strike out at the\n",
+      "I think it boils down to this: Anonymous has a best-case-scalability bias who grew up\n",
       "============\n",
-      "I think Wars configs value hate Wei anti fucks, https://zittiesmook.wordpress.\n",
+      "I think the debate is closing in now hate all the time. What do you hate about CIS and the CIS\n",
       "============\n",
-      "I think you might have noticed very quickly that since last April, riots and protests on occupied and \"thais\n",
+      "I think I've lost there ass. Also it's hard for me to defend it. I think any anti\n",
       "============\n",
-      "I think it's my job. Honestly, my perception is always of nothingness. We all know that we\n",
+      "I think if your browser doesn't support inline frames or is about to pull out, you should stop and think\n",
       "============\n",
-      "I think it all boils down to this: there really is no way for Jason's relationship to survive. I\n"
+      "I think Australian politicians used to hate people who gave them bullshit. He used to hate creased jets, mut\n"
      ]
     }
    ],
@@ -202,7 +222,7 @@
     "n_samples = 10\n",
     "gen_texts = []\n",
     "\n",
-    "with model.hooks(fwd_hooks=[(hook_point, partial(patch_hook, c=7.0, pos=0))]):\n",
+    "with model.hooks(fwd_hooks=[(hook_point, partial(patch_hook, c=8.0, pos=0))]):\n",
     "    for i in range(n_samples):\n",
     "        print(\"============\")\n",
     "        output = model.generate(text, prepend_bos=True, use_past_kv_cache=False, max_new_tokens=20, verbose=False)\n",
@@ -1228,7 +1248,7 @@
     }
    ],
    "source": [
-    "# raise Exception(\"About to call gpt4 a bunch of times. Comment out this line to proceed.\")\n",
+    "raise Exception(\"About to call gpt4 a bunch of times. Comment out this line to proceed.\")\n",
     "\n",
     "c_vals = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 15, 20]\n",
     "mean_scores = []\n",
