--- a/slava_scratch/gemma_case.ipynb
+++ b/slava_scratch/gemma_case.ipynb
@@ -38,6 +38,7 @@
     "from steering.eval_utils import evaluate_completions\n",
     "from steering.utils import text_to_sae_feats, top_activations, normalise_decoder, get_activation_steering\n",
     "from steering.patch import generate, get_scores_and_losses\n",
+    "from steering.visualization import Scatterplot\n",
     "\n",
     "import plotly.express as px\n",
     "\n",
@@ -269,8 +270,8 @@
     }
    ],
    "source": [
-    "act_steer_scores, act_ster_losses = get_scores_and_losses(\n",
-    "    model, hp6, anger_activation_steering, prompt, scales,\n",
+    "mean_anger_scores, all_scores, sae_anger_losses = get_scores_and_losses(\n",
+    "    model, hp6, anger_activation_steering, prompt, \"Anger\", scales,\n",
     ")"
    ]
   },
@@ -458,6 +459,15 @@
     "sae_anger_scores, sae_anger_losses = get_scores_and_losses(\n",
     "    model, hp6, anger_sae_steering, prompt, scales,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Scatterplot(\"Anger\", scales, mean_anger_scores, sae_anger_losses)"
    ]
   },
   {
@@ -1460,10 +1470,10 @@
     }
    ],
    "source": [
-    "fig = px.line(x=act_ster_losses, y=act_steer_scores, title=\"Anger vs. Loss\", labels={\"x\": \"Loss\", \"y\": \"Mean Anger Score\"}, markers=True)\n",
-    "fig.add_scatter(x=sae_anger_losses, y=sae_anger_scores, mode='lines+markers', name='SAE steering')\n",
-    "fig.update_yaxes(range=[1, 9], dtick=1)\n",
-    "fig.show()"
+    "# fig = px.line(x=act_ster_losses, y=act_steer_scores, title=\"Anger vs. Loss\", labels={\"x\": \"Loss\", \"y\": \"Mean Anger Score\"}, markers=True)\n",
+    "# fig.add_scatter(x=sae_anger_losses, y=sae_anger_scores, mode='lines+markers', name='SAE steering')\n",
+    "# fig.update_yaxes(range=[1, 9], dtick=1)\n",
+    "# fig.show()"
    ]
   },
   {
